# Corporate-AI-Agents-Platforms

./: .dockerignore  Corporate AI Agents Platform.7z  README.md  docker-compose.yml  index.html  package.json
dio-meetings/: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
dio-meetings/src/: ai_agent.py  app.py  dependencies.py  prompts.py  s3_utils.py  schemas.py  settings.py
dio-meetings/src/database/: base.py  models.py  repositories.py
dio-meetings/src/integrations/: salute_speech.py  sberdevices.py  yandex_speechkit.py
dio-meetings/src/routers/: __init__.py  meetings.py  minutes.py  tasks.py
dio-meetings/src/services/: meeting_media.py  task_processing.py
dio-meetings/src/utils/: commons.py  docs.py  media.py
frontend/: Dockerfile  package-lock.json
frontend/src/app/: App.tsx
frontend/src/app/components/: AgentDetails.tsx  AgentWorkspace.tsx  AgentsView.tsx  Auth.tsx  Header.tsx  SEOWorkspace.tsx  Sidebar.tsx
frontend/src/app/components/ui/: markdownrender.tsx  paginateddocument.tsx
frontend/src/styles/: index.css
src/app/: App.tsx
src/app/components/: AgentWorkspace.tsx  AgentsView.tsx  AnalyticsView.tsx  Auth.tsx  Dashboard.tsx  MeetingAnalytics.tsx  Sidebar.tsx  WebResearcherWorkspace.tsx  WorkspaceSocializer.tsx
src/app/components/ui/: dialog.tsx
